[gd_scene load_steps=19 format=3 uid="uid://d1ftc2bsnc28r"]

[ext_resource type="Script" path="res://src/main/main.gd" id="1_58k2u"]
[ext_resource type="Script" path="res://src/main/gui/gui.gd" id="2_i5t1w"]
[ext_resource type="Texture2D" uid="uid://upk45rvboo31" path="res://assets/graphic/gui/icons/main_file.png" id="3_hytgr"]
[ext_resource type="Texture2D" uid="uid://bgin4a464lscb" path="res://assets/graphic/gui/icons/main_save.png" id="4_fk662"]
[ext_resource type="Texture2D" uid="uid://cavpp7elaes7l" path="res://assets/graphic/gui/player/play.png" id="5_ovxhx"]
[ext_resource type="Texture2D" uid="uid://careumpiracnw" path="res://assets/graphic/gui/player/pause.png" id="6_cbnpw"]
[ext_resource type="Texture2D" uid="uid://wtnqwogi2ar6" path="res://assets/graphic/gui/player/rewind.png" id="7_iid86"]
[ext_resource type="Texture2D" uid="uid://do02k6map2qys" path="res://assets/graphic/gui/player/reload.png" id="8_npou3"]
[ext_resource type="Theme" uid="uid://dcsdd6xcoyhoq" path="res://assets/godot/themes/blue.tres" id="9_7dfw7"]
[ext_resource type="Theme" uid="uid://dvkde7fnq2ulu" path="res://assets/godot/themes/white.tres" id="10_r6tdi"]
[ext_resource type="Script" path="res://src/main/node2d/node2d.gd" id="11_5af0q"]
[ext_resource type="Texture2D" uid="uid://cn1licnpsxo0g" path="res://assets/graphic/2d/background/blue_paper.png" id="13_70htn"]
[ext_resource type="PackedScene" uid="uid://ll40qltxjh1o" path="res://src/main/node2d/labs/mechanic.tscn" id="13_fy0sy"]
[ext_resource type="PackedScene" uid="uid://def2bkc3wpx2e" path="res://src/main/gui/gui_cursor.tscn" id="14_u1iqx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pligj"]
bg_color = Color(0.294118, 0.623529, 0.992157, 1)
corner_radius_bottom_right = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5c1c"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 5
border_width_right = 10
border_color = Color(0.388235, 0.666667, 1, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0, 0, 0, 0.184314)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80iel"]
content_margin_left = 15.0
bg_color = Color(0, 0.480469, 0.914063, 1)
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.2)
corner_radius_top_left = 40
corner_radius_top_right = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lv67e"]
content_margin_left = 15.0
bg_color = Color(0, 0.480469, 0.914063, 1)
border_width_left = 5
border_color = Color(0, 0.480469, 0.910156, 1)
corner_radius_bottom_right = 40
expand_margin_top = 10.0

[node name="Main" type="Node"]
script = ExtResource("1_58k2u")

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("2_i5t1w")

[node name="HUD" type="VBoxContainer" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="PanelContainer" parent="GUI/HUD"]
custom_minimum_size = Vector2(700, 45)
layout_mode = 2
size_flags_horizontal = 0
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_pligj")

[node name="Panel" type="HBoxContainer" parent="GUI/HUD/Menu"]
layout_mode = 2

[node name="Edit" type="MarginContainer" parent="GUI/HUD/Menu/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="EditButton" type="TextureButton" parent="GUI/HUD/Menu/Panel/Edit"]
layout_mode = 2
texture_normal = ExtResource("3_hytgr")

[node name="Save" type="MarginContainer" parent="GUI/HUD/Menu/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="SaveButton" type="TextureButton" parent="GUI/HUD/Menu/Panel/Save"]
layout_mode = 2
texture_normal = ExtResource("4_fk662")

[node name="Player" type="HBoxContainer" parent="GUI/HUD/Menu"]
layout_mode = 2
alignment = 2

[node name="Play" type="MarginContainer" parent="GUI/HUD/Menu/Player"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="PlayButton" type="TextureButton" parent="GUI/HUD/Menu/Player/Play"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_ovxhx")
texture_pressed = ExtResource("6_cbnpw")

[node name="Rewind" type="MarginContainer" parent="GUI/HUD/Menu/Player"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Rewindbutton" type="TextureButton" parent="GUI/HUD/Menu/Player/Rewind"]
layout_mode = 2
texture_normal = ExtResource("7_iid86")
texture_pressed = ExtResource("7_iid86")

[node name="Reload" type="MarginContainer" parent="GUI/HUD/Menu/Player"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="ReloadButton" type="TextureButton" parent="GUI/HUD/Menu/Player/Reload"]
layout_mode = 2
texture_normal = ExtResource("8_npou3")
texture_pressed = ExtResource("8_npou3")

[node name="Speed" type="MarginContainer" parent="GUI/HUD/Menu/Player"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="SpinBox" type="SpinBox" parent="GUI/HUD/Menu/Player/Speed"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("9_7dfw7")

[node name="Workspace" type="HBoxContainer" parent="GUI/HUD"]
layout_mode = 2
size_flags_vertical = 3

[node name="WorkspaceBox" type="MarginContainer" parent="GUI/HUD/Workspace"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
mouse_force_pass_scroll_events = false
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="WorkspaceBox" type="VBoxContainer" parent="GUI/HUD/Workspace/WorkspaceBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
alignment = 2

[node name="InfoLabel" type="Label" parent="GUI/HUD/Workspace/WorkspaceBox/WorkspaceBox"]
layout_mode = 2
theme = ExtResource("10_r6tdi")
theme_override_font_sizes/font_size = 25
text = "Скорость: 0
Ускорение: 0
Пройденный путь: 0"
horizontal_alignment = 2

[node name="ItemsWindow" type="PanelContainer" parent="GUI"]
custom_minimum_size = Vector2(200, 400)
anchors_preset = -1
anchor_left = 0.045
anchor_top = 0.097
anchor_right = 0.26
anchor_bottom = 0.444
offset_left = 0.499996
offset_top = 0.159996
offset_right = -3.05176e-05
offset_bottom = 0.319977
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
mouse_filter = 1
theme = ExtResource("10_r6tdi")
theme_override_styles/panel = SubResource("StyleBoxFlat_v5c1c")

[node name="ItemsWindowBox" type="VBoxContainer" parent="GUI/ItemsWindow"]
layout_mode = 2

[node name="Head" type="PanelContainer" parent="GUI/ItemsWindow/ItemsWindowBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04
theme = ExtResource("9_7dfw7")
theme_override_styles/panel = SubResource("StyleBoxFlat_80iel")

[node name="HeadLabel" type="Label" parent="GUI/ItemsWindow/ItemsWindowBox/Head"]
layout_mode = 2
theme_override_font_sizes/font_size = 19
text = "Объекты
"

[node name="Body" type="MarginContainer" parent="GUI/ItemsWindow/ItemsWindowBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BodyBox" type="VBoxContainer" parent="GUI/ItemsWindow/ItemsWindowBox/Body"]
layout_mode = 2

[node name="Search" type="HBoxContainer" parent="GUI/ItemsWindow/ItemsWindowBox/Body/BodyBox"]
layout_mode = 2

[node name="SearchLine" type="LineEdit" parent="GUI/ItemsWindow/ItemsWindowBox/Body/BodyBox/Search"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("10_r6tdi")
theme_override_colors/font_color = Color(0.658824, 0.658824, 0.658824, 1)
theme_override_colors/font_placeholder_color = Color(0.388235, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 16
placeholder_text = "Поиск"

[node name="Items" type="MarginContainer" parent="GUI/ItemsWindow/ItemsWindowBox/Body/BodyBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="ItemsBox" type="GridContainer" parent="GUI/ItemsWindow/ItemsWindowBox/Body/BodyBox/Items"]
layout_mode = 2
mouse_force_pass_scroll_events = false
columns = 3

[node name="PropertiesWindow" type="PanelContainer" parent="GUI"]
custom_minimum_size = Vector2(450, 300)
anchors_preset = -1
anchor_top = 1.111
anchor_right = 0.273
anchor_bottom = 1.458
offset_top = 0.0799561
offset_right = -0.299988
offset_bottom = 0.23999
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("10_r6tdi")

[node name="PropertiesWindowBox" type="VBoxContainer" parent="GUI/PropertiesWindow"]
layout_mode = 2

[node name="Head" type="PanelContainer" parent="GUI/PropertiesWindow/PropertiesWindowBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04
theme = ExtResource("9_7dfw7")

[node name="HeadLabel" type="Label" parent="GUI/PropertiesWindow/PropertiesWindowBox/Head"]
layout_mode = 2
theme_override_font_sizes/font_size = 19
text = " Свойства"

[node name="Body" type="MarginContainer" parent="GUI/PropertiesWindow/PropertiesWindowBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="BodyBox" type="HBoxContainer" parent="GUI/PropertiesWindow/PropertiesWindowBox/Body"]
layout_mode = 2

[node name="Model" type="VBoxContainer" parent="GUI/PropertiesWindow/PropertiesWindowBox/Body/BodyBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Properties" type="PanelContainer" parent="GUI/PropertiesWindow/PropertiesWindowBox/Body/BodyBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_lv67e")

[node name="PropertiesBox" type="VBoxContainer" parent="GUI/PropertiesWindow/PropertiesWindowBox/Body/BodyBox/Properties"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("9_7dfw7")

[node name="CursorLayer" type="CanvasLayer" parent="GUI"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("11_5af0q")

[node name="Bodies" type="Node2D" parent="Node2D"]

[node name="Enviroment" type="Node2D" parent="Node2D"]

[node name="Background" type="Node2D" parent="Node2D/Enviroment"]

[node name="Background" type="CanvasLayer" parent="Node2D/Enviroment/Background"]
layer = -1

[node name="Background" type="TextureRect" parent="Node2D/Enviroment/Background/Background"]
offset_right = 1100.0
offset_bottom = 721.0
texture = ExtResource("13_70htn")

[node name="Lab" type="Node2D" parent="Node2D/Enviroment"]

[node name="Mechanic" parent="Node2D/Enviroment/Lab" instance=ExtResource("13_fy0sy")]
position = Vector2(550, 400)

[node name="Camera" type="Node2D" parent="Node2D"]

[node name="Camera2D" type="Camera2D" parent="Node2D/Camera"]
anchor_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="Node2D"]

[node name="GUICursor" parent="Node2D/CanvasLayer" instance=ExtResource("14_u1iqx")]

[connection signal="toggled" from="GUI/HUD/Menu/Player/Play/PlayButton" to="GUI" method="_on_play_toggled"]
[connection signal="pressed" from="GUI/HUD/Menu/Player/Reload/ReloadButton" to="GUI" method="_on_reload_pressed"]
[connection signal="mouse_exited" from="GUI/ItemsWindow" to="GUI" method="_on_items_window_mouse_exited"]
